# aarch64-neon-study

./: LICENSE  benchmark.txt  configure.ac
src/: Makefile.am  main.c  smixer.c  smixer.h  smixer_neon.c  testdata.c
